--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,6 +7,7 @@
 		"python.linting.enabled": true,
 		"python.linting.pylintEnabled": true
 	},
+	"containerUser": "jenkins",
 	"remoteEnv": {
 		"PYTHONPATH": "/opt/COMPSs/Bindings/python/3/:${containerEnv:PYTHONPATH}",
 	},
