Fix COMPSs execution in dev environment
Starts sshd as root

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,7 @@
 		"python.linting.pylintEnabled": true
 	},
 	"containerUser": "jenkins",
+	"postStartCommand": "sudo service ssh start",
 	"remoteEnv": {
 		"PYTHONPATH": "/opt/COMPSs/Bindings/python/3/:${containerEnv:PYTHONPATH}",
 	},
