Set minimum Python,pycompss version

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,10 @@ version = 0.1.0
 
 [options]
 packages = rosnet
+python_requires = >=3.6
 install_requires =
 	numpy
-	pycompss
+	pycompss >= 2.9
 dependency_links =
 	git+https://github.com/jcmgray/cotengra#egg=cotengra
 
