Configure Python in VSCode
- Use local virtualenv by default
- Strict type checking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+	"python.pythonPath": ".venv/bin/python",
+	"python.analysis.typeCheckingMode": "strict",
 	"python.formatting.provider": "black",
 	"python.formatting.blackArgs": [
 		"--line-length=1000"
