Replace custom numpy dispatcher with autoray + plum
autoray replaces our custom dispatcher and adds extensibility over numpy methods.
plum adds multiple dispatching, parametric methods and classes, specialization, ...

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,8 @@ python_requires = >=3.8
 install_requires =
 	numpy
 	pycompss >= 2.9
+	autoray
+	plum-dispatch
 dependency_links =
 	git+https://github.com/jcmgray/cotengra#egg=cotengra
 
