--- a/setup.cfg
+++ b/setup.cfg
@@ -10,11 +10,10 @@ install_requires =
 	pycompss >= 2.9
 	autoray
 	plum-dispatch
-dependency_links =
-	git+https://github.com/jcmgray/cotengra#egg=cotengra
 
 [options.extras_require]
 benchmark =
 	opt_einsum
 	quimb
 	kahypar
+	cotengra @ git+https://github.com/jcmgray/cotengra
