--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ version = 0.1.0
 packages = rosnet
 python_requires = >=3.8
 install_requires =
-	numpy
+	numpy >= 1.20
 	pycompss >= 2.9
 	autoray
 	plum-dispatch
