Replace plum with multimethod

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ install_requires =
 	numpy >= 1.20
 	pycompss >= 2.9
 	autoray
-	plum-dispatch
+	multimethod
 
 [options.extras_require]
 benchmark =
