--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,14 +1,14 @@
 {
 	"name": "Python 3",
-	"image": "compss/compss:latest",
+	"image": "compss/compss:rosnet-3.9",
 	"settings": {
 		"terminal.integrated.shell.linux": "/bin/bash",
-		"python.pythonPath": "/usr/bin/python3.6",
+		"python.pythonPath": "/usr/bin/python3.9",
 		"python.linting.enabled": true,
 		"python.linting.pylintEnabled": true
 	},
-	"containerUser": "jenkins",
-	"postStartCommand": "sudo service ssh start",
+	"containerUser": "root",
+	// "postStartCommand": "service ssh start",
 	"remoteEnv": {
 		"PYTHONPATH": "/opt/COMPSs/Bindings/python/3/:${containerEnv:PYTHONPATH}",
 	},
