--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = rosnet
 version = 0.1.0
 
 [options]
-packages = rosnet
+packages = find:
 python_requires = >=3.8
 setup_requires =
 	setuptools >= 38.3.0
