Add libimporter wrapper script

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ tests_require =
 	tox
 scripts =
 	bin/rosnet-launch
+	bin/rosnet-libimporter-wrapper.py
 
 [options.extras_require]
 distributed =
