Add sphinx dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,9 @@ scripts =
 	bin/rosnet-launch
 
 [options.extras_require]
+docs =
+	sphinx
+	sphinx-book-theme
 distributed =
 	pycompss >= 2.9
 	dill
