Fix COMPSs build caching by ARG triggering

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -79,7 +79,7 @@ ARG COMPSS_KAFKA=false
 
 # build COMPSs
 COPY build-compss.sh /
-RUN ./build-compss.sh
+RUN bash -x /build-compss.sh $COMPSS_TAG $COMPSS_BINDING_C $COMPSS_BINDING_PYTHON $COMPSS_EXTRAE $COMPSS_AUTOPARALLEL $COMPSS_SKIP_TESTS $COMPSS_MONITOR $COMPSS_STREAM $COMPSS_JACOCO $COMPSS_KAFKA $COMPSS_CLI
 
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
