Save Docker ARGs as environment variables
Useful as a build receipt

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -81,5 +81,18 @@ ARG COMPSS_KAFKA=false
 COPY build-compss.sh /
 RUN bash -x /build-compss.sh $COMPSS_TAG $COMPSS_BINDING_C $COMPSS_BINDING_PYTHON $COMPSS_EXTRAE $COMPSS_AUTOPARALLEL $COMPSS_SKIP_TESTS $COMPSS_MONITOR $COMPSS_STREAM $COMPSS_JACOCO $COMPSS_KAFKA $COMPSS_CLI
 
+# save args as a receipt of the build configuration
+ENV COMPSS_TAG=$COMPSS_TAG
+ENV COMPSS_BINDING_C=$COMPSS_BINDING_C
+ENV COMPSS_BINDING_PYTHON=$COMPSS_BINDING_PYTHON
+ENV COMPSS_EXTRAE=$COMPSS_EXTRAE
+ENV COMPSS_AUTOPARALLEL=$COMPSS_AUTOPARALLEL
+ENV COMPSS_SKIP_TESTS=$COMPSS_SKIP_TESTS
+ENV COMPSS_MONITOR=$COMPSS_MONITOR
+ENV COMPSS_STREAM=$COMPSS_STREAM
+ENV COMPSS_JACOCO=$COMPSS_JACOCO
+ENV COMPSS_KAFKA=$COMPSS_KAFKA
+ENV COMPSS_CLI=$COMPSS_CLI
+
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
