--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Python 3",
-	"image": "compss/compss:rosnet-3.9",
+	"image": "mofeing/pycompss:2.10-python3.9",
 	"settings": {
 		"python.linting.enabled": true,
 		"python.linting.pylintEnabled": true
