Move test dependencies to extra dependencies
"test_requires" is deprecated

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,10 +13,6 @@ install_requires =
 	autoray
 	multimethod
 	opt_einsum
-tests_require =
-	pytest
-	pytest-cov >= 3.0
-	tox
 scripts =
 	bin/rosnet-launch
 
@@ -35,3 +31,8 @@ benchmark =
 	quimb
 	kahypar
 	cotengra @ git+https://github.com/jcmgray/cotengra
+test =
+	pytest
+	pytest-cov >= 3.0
+	coverage
+	tox
