Fix dataClay package registration

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,11 @@ scripts =
 	bin/rosnet-launch
 	bin/dataclaycmd
 
+[options.packages.find]
+where = .
+include = rosnet*
+exclude = test
+
 [options.extras_require]
 docs =
 	sphinx
